# pydmdgp

./: .gitignore  LICENSE  README.md  pyproject.toml  run_solver.py
data/: instance.csv  tetrahedron.csv
src/pydmdgp/: __init__.py  exceptions.py  geometry.py  graph.py  solver.py
tests/: test_solver.py
